--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.11"
 dependencies = [
     "mlflow==2.17.0",
     "virtualenv>=20.30.0",
+    "pandas==2.2.3",
+    "scikit-learn==1.5.2",
 ]
 
 [project.optional-dependencies]
