--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,38 @@ test = [
     "pandas>=2.2.3",
     "pytest>=8.3.5",
     "requests>=2.32.3",
+    "pip>=25.0.1",
+    "ipykernel>=6.29.5, <7"
 ]
 
 [tool.pytest.ini_options]
 addopts = "-s --no-header --no-summary"
 testpaths = [ "tests" ]
 pythonpath = [ "." ]
+
+[tool.ruff]
+line-length = 120
+
+select = [
+    "F",    # pyflakes rules
+    "E",    # pycodestyle error rules
+    "W",    # pycodestyle warning rules
+    "B",    # flake8-bugbear rules
+    "I",    # isort rules
+    "UP",   # pyupgrade rules
+    "SIM",  # flake8-simplify rules
+    "ERA",  # eradicate rules
+    "C",    # pylint convention rules
+    "ANN"   # flake8-annotations rules
+]
+ignore = [
+    "D107", # Missing docstring in `__init__`
+    "D203", # incorrect-blank-line-before-class
+    "D213", # multi-line-summary-second-line
+    "E501", # line-too-long
+    "C901", # too complex
+    "ERA001", # commented out code
+]
+
+[tool.ruff.format]
+indent-style = "space"
